# QRec

./: .gitignore  README.md
backend/: __init__.py  app.py  config.py  pyproject.toml  requirements.txt
backend/components/: __init__.py
backend/components/camera_verification/: __init__.py  verificationController.py  verificationService.py
backend/components/camera_verification/error_handling/: __init__.py  errorConfig.py  errorService.py
backend/components/camera_verification/faceid/: __init__.py  faceidService.py
backend/components/camera_verification/qrcode/: __init__.py  qrcodeConfig.py  qrcodeService.py
backend/components/entries/: entryService.py
backend/components/faceid/: faceidService.py
backend/components/qrcode/: qrcodeController.py  qrcodeService.py
backend/components/reports/: __init__.py  reportController.py  reportService.py
backend/components/utils/: __init__.py  imageUtils.py
backend/components/workers/: __init__.py  workerController.py  workerService.py
backend/database/: models.py
backend/database/schema/: schemas.py
backend/templates/: 404.html
backend/templates/reports/: report_pdf.html
backend/tests/: conftest.py  test_app.py  test_errorService.py  test_faceidService.py  test_imageUtils.py  test_qrcodeService.py  test_verificationController.py  test_workerService.py
backend/tests/api/: test_app.py  test_reports_api.py  test_verification_api.py  test_verification_controller.py  test_worker_controller.py
backend/tests/integration/: test_db_connection.py  test_report_service.py  test_worker_service.py
backend/tests/unit/: test_faceid_logic.py  test_qrcode_utils.py
(+26 files in other folders)
