[project]
name = "io-projekt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "flasgger>=0.9.7.1",
    "flask>=3.1.2",
    "flask-marshmallow>=1.3.0",
    "flask-sqlalchemy>=3.1.1",
    "marshmallow>=4.1.1",
    "opencv-python>=4.12.0.88",
    "pdoc>=16.0.0",
    "pillow>=12.0.0",
    "pycairo>=1.29.0",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.44",
    "werkzeug>=3.1.4",
    "xhtml2pdf>=0.2.17",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API:UserWarning"
]

[tool.setuptools]
packages = ["database", "components"]
